force-app/main/default/objects/Account_Scoring__c/Account_Scoring__c.object-meta.xml
<CustomObject>
    <description>Latest ML scoring outputs for NBA V2 impact weighting. Upserted daily by external pipeline. One record per Account, keyed on Entity_ID__c.</description>
    <label>Account Scoring</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Account Scoring Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Scorings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>