force-app/main/default/objects/Account_Scoring__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent Account for this scoring record. Populated by external pipeline during daily upsert. 1:1 enforced via Entity_ID__c uniqueness. Restrict-on-delete prevents orphan scoring records.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Scorings</relationshipLabel>
    <relationshipName>Account_Scorings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>