force-app/main/default/objects/Account_Scoring__c/fields/Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Entity_ID__c</fullName>
    <description>Mirrors Account.Entity_ID__c (company_uuid). External upsert key for daily scoring pipeline. Uniqueness constraint enforces one scoring record per Account.</description>
    <externalId>true</externalId>
    <label>Entity ID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>