force-app/main/default/objects/Account_Scoring__c/fields/Incremental_If_Won__c.field-meta.xml
<CustomField>
    <fullName>Incremental_If_Won__c</fullName>
    <label>Incremental If Won</label>
    <description>Expected incremental MRR value if the opportunity is won</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>