force-app/main/default/objects/Account_Scoring__c/fields/Likelihood_To_Win__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_To_Win__c</fullName>
    <label>Likelihood To Win</label>
    <description>ML-predicted probability of winning the opportunity (0.0000 to 1.0000)</description>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>