force-app/main/default/objects/Account_Scoring__c/fields/Prob_Payroll_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Prob_Payroll_Conversion__c</fullName>
    <description>ML-predicted probability of payroll conversion (0-100%). Source value (0-1 decimal) is converted to percent format by the pipeline before load. Input to NBA V2 Impact layer.</description>
    <label>Prob Payroll Conversion</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>