force-app/main/default/objects/Account_Scoring__c/fields/Tier_Upgrade_Top_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Tier_Upgrade_Top_Drivers__c</fullName>
    <description>Top feature drivers for the tier upgrade prediction. Used for explainability in NBA V2 UI. Format defined by ML pipeline (e.g., JSON array or semicolon-delimited key-value pairs).</description>
    <label>Tier Upgrade Top Drivers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>